Overflowing issues fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -182,6 +182,7 @@ a {
     background: #3b5d50;
     padding: calc(4rem - 30px) 0 0rem 0; 
     margin-top: 80px;
+    overflow-x: hidden;
 }
     
     @media (min-width: 768px) {
@@ -210,7 +211,6 @@ a {
       position: relative; }
       .intro .intro-img-wrap img {
         position: relative;
-        overflow: hidden;
         top: 0px;
         right: 0px;
         z-index: 2;
@@ -289,6 +289,7 @@ a {
 }
 
 .sanbud-section {
+    overflow-x: hidden;
     padding: 7rem 0 0 0;}
     .sanbud-section .sanbud-map img {
         width: 100%;
